Add+Fix: 新規登録のバリデーションを追加
・deviseで用意されているバリデーションに加え、nameカラムに2文字以上、20文字以下のバリデーションを追加
・エラーメッセージの表示位置や色を修正
・エラーメッセージの日本化欄にパスワード確認時のエラー文言を追加

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -58,5 +58,5 @@ ja:
       not_found: 'は見つかりませんでした。'
       not_locked: 'は凍結されていません。'
       not_saved:
-        one: "エラーが発生したため %{resource} は保存されませんでした:"
+        one: "1件のエラーが発生"
         other: "%{count} 件のエラー有"
