Add+Update: Ja.ymlファイル更新、投稿機能のバリデーション追加
・バリデーションによるエラーの日本語表記追加のため、Ja.ymlファイルを更新
・投稿機能にバリデーションを設定、遷移先をエラー表記を追加

--- a/config/locales/models.ja.yml
+++ b/config/locales/models.ja.yml
@@ -27,3 +27,5 @@ ja:
               confirmation: "が内容とあっていません"
             password_confirmation:
               confirmation: "が内容とあっていません"
+            introduce:
+              too_long: "は%{count}文字以下に設定して下さい"
