Add+Fix: 投稿一覧画面に検索画像を追加、管理者画面の日付表示修正
・投稿一覧画面の画像で検索できるボタンを追加
・管理者画面の日本語表示に伴い、日付がエラー表示が発生していたのを修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -35,3 +35,5 @@ ja:
       over_x_years:
         one:   "1年以上"
         other: "%{count}年以上"
+  date:
+    month_names: [~, 1月, 2月, 3月, 4月, 5月, 6月, 7月, 8月, 9月, 10月, 11月, 12月]
